rename struct and url path params
